2011-05-19  Robert Hogan  <robert@webkit.org>

Reviewed by Andreas Kling.

        [Qt] Fix plugins/windowless_plugin_paint_test.html
        https://bugs.webkit.org/show_bug.cgi?id=60992

        * platform/qt/Skipped:
2011-05-19  Robert Hogan  <robert@webkit.org>

        Reviewed by Andreas Kling.

        [Qt] Fix plugins/windowless_plugin_paint_test.html
        https://bugs.webkit.org/show_bug.cgi?id=60992

        Call gdk_init_check before gdk_display_get_default().
        If we don't do this, gdk_display_get_default() will hang
        the next time it's called.

        * plugins/qt/PluginViewQt.cpp:
        (WebCore::getPluginDisplay):
2011-05-19  Robert Hogan  <robert@webkit.org>

        Reviewed by Andreas Kling.

        [Qt] Fix plugins/windowless_plugin_paint_test.html

        Call gdk_init_check before gdk_display_get_default().
        If we don't do this, gdk_display_get_default() will hang
        the next time it's called.

        * WebProcess/Plugins/Netscape/x11/NetscapePluginX11.cpp:
        (WebKit::getPluginDisplay):

Canonical link: https://commits.webkit.org/76500@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86870 268f45cc-cd09-0410-ab3c-d52691b4dbfc